fixed endgame screen toggle jump

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,9 @@
 }
 
 #stat_graphs svg {
-  z-index:1;
+  z-index:-1;
+  position: absolute;
+  left: 0px;
   top: 0px;
 }
 
